--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,4 +3,7 @@
     Copyright &copy; <%= Time.now.year %>
     <%= link_to 'blackerby', 'https://github.com/blackerby' %>
   </p>
+  <p>
+    <%= link_to 'Support', 'https://github.com/blackerby' %>
+  </p>
 </footer>
